lanecwe-Prod/src/objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>Standard</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Assigned</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Contacting</fullName>
        </values>
        <values>
            <fullName>Disqualified</fullName>
        </values>
        <values>
            <fullName>Qualifying</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>AE_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Used by AAE&apos;s to select the Account Exec (AE) that their lead is related to.</inlineHelpText>
        <label>AE Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>For both manual and automatic selection of an Account record related to this lead.</inlineHelpText>
        <label>Related Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Additional_Marketing_Info__c</fullName>
        <inlineHelpText>Provides information relevant to how this lead was generated from the marketing team that collected it.</inlineHelpText>
        <label>Additional Marketing Info</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Admin_Flag_Text__c</fullName>
        <label>Admin Flag (Text)</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agent_Seller_Name__c</fullName>
        <inlineHelpText>Used to capture 1 Agent Seller Name</inlineHelpText>
        <label>Agent Seller Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Type__c</fullName>
        <label>Business Type</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ChannelType__c</fullName>
        <inlineHelpText>Default value is Direct.  Do not change unless you work in the Partners channel.</inlineHelpText>
        <label>Channel Type</label>
        <picklist>
            <picklistValues>
                <fullName>Affinity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Distributor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>End User - Agent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>End User - Distributor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>End User - Reseller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing Alliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Master Agent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reseller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sub Agent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sub-Reseller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VAR</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <description>Channel from Account Owner&apos;s user record</description>
        <label>Channel</label>
        <picklist>
            <picklistValues>
                <fullName>ADM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Budget Conferencing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Care/Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ecommerce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-Commerce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ECS Acquisition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ECS Base</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ECS SE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA : Acquisition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA : Base</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fin&amp;Bill</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GCS Acquisition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GCS Base</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GCS Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GCS Diamond</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GCS SE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GCS Video Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hunters CEUR/NEUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hunters WEUR/SEUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>iMeet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ireland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IST Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KAT</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Chat_Department__c</fullName>
        <label>Chat Department</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chat_ID__c</fullName>
        <label>xHOLD-Chat ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cloned_Lead_ID__c</fullName>
        <description>used to copy over the Lead ID whenever a record is cloned using the partial clone button.</description>
        <label>zz-Cloned Lead ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_ID__c</fullName>
        <label>Company ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Name_Kana__c</fullName>
        <label>Company Name (Kana)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Name_Kanji__c</fullName>
        <label>Company Name (Asian Char)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractURL__c</fullName>
        <label>ContractURL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>DB_Created_Date_without_Time__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package.  If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>x-DB Created Date without Time</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DB_Lead_Age__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <formula>IF(IsConverted,ConvertedDate - DATEVALUE(CreatedDate), TODAY() - DATEVALUE(CreatedDate))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Data_Loader_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Just a simple flag to toggle on or off to fire triggers and/or workflows on the object. Setting this field should have no other impact.</description>
        <inlineHelpText>Just a simple flag to toggle on or off to fire triggers and/or workflows on the object. Setting this field should have no other impact.</inlineHelpText>
        <label>Data Loader Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Lead Details Captured&quot;, &quot;Missing: &quot;&amp;IF( LEN( FirstName)=0,&quot;First Name, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN(LastName)=0, &quot;Last Name, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Company)=0, &quot;Company, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Phone)=0, &quot;Phone, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL(Salutation,&quot;&quot;), &quot;Salutation, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL(Rating,&quot;&quot;), &quot;Rating, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(City)=0, &quot;Complete Address, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Email)=0, &quot;Email&quot;,&quot;&quot;))</formula>
        <label>x-Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF(LEN( FirstName ) = 0, 0,15) + IF(LEN( LastName ) = 0, 0,15) + IF(LEN( Company ) = 0, 0,15) + IF(LEN( Phone ) = 0, 0,15) + IF( ISPICKVAL( Salutation,&quot;&quot;), 0,10) + IF( ISPICKVAL(Rating,&quot;&quot;), 0,10) + IF( LEN( City ) = 0, 0,10) + IF( LEN( Email ) = 0, 0,10)</formula>
        <label>x-Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_of_Opt_Out__c</fullName>
        <inlineHelpText>Date this record opted out of receiving CEM (commercial electronic messages) from PGi.  Will Default to the date the record was created in SFDC.</inlineHelpText>
        <label>Date of Opt-Out</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Opt_in__c</fullName>
        <inlineHelpText>Date this record opted in to receiving CEM (commercial electronic messages) from PGi</inlineHelpText>
        <label>Date of Opt-in</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_from_Created_to_Converted__c</fullName>
        <formula>IF(ISBLANK(ConvertedDate), TODAY() - DATEVALUE(CreatedDate), ConvertedDate - DATEVALUE(CreatedDate))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days from Created to Converted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Decision_Making_Authority__c</fullName>
        <label>Decision Making Authority</label>
        <picklist>
            <picklistValues>
                <fullName>Executive (CEO, COO, CFO, CIO, President)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Owner/Partner/VP/SVP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <picklist>
            <picklistValues>
                <fullName>Accounting/Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Communications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Service/Care/Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exec - &quot;C&quot; Level</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR Generalist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR Recruiting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT/IS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Procurement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description_1st_100__c</fullName>
        <label>Description (1st 100)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Custom field used to map Lead Description to Opportunity Description. By default, SFDC only maps the Lead Description field to the Contact Description field. This will allow for it to also be mapped to the Opportunity via Lead Mapping. A workflow rule on Lead will update this custom field from the standard Description field.</description>
        <label>Description__c</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Disqual_Reason_Other__c</fullName>
        <label>xHOLD-Disqual Reason - Other</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disqual_Reason__c</fullName>
        <label>Disqual Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Add to Nurture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Already engaged in opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bad email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bad phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact Unreachable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Existing customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invalid Company Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No interest/need</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGi Test/employee</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Disqualification_Date__c</fullName>
        <description>Set the first time a lead is changed to Disqualified</description>
        <inlineHelpText>Set the first time a lead is changed to Disqualified</inlineHelpText>
        <label>Disqualification Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DoNotSolicit__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Ecomm: used in back office for company create</description>
        <label>DoNotSolicit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Domain_from_email_address__c</fullName>
        <formula>IF( 
AND( 
! CONTAINS(Email, &quot;gmail&quot;), 
! CONTAINS(Email, &quot;hotmail&quot;), 
! CONTAINS(Email, &quot;mail.com&quot;), 
! CONTAINS(Email, &quot;yahoo&quot;), 
! CONTAINS(Email, &quot;gmx&quot;), 
! CONTAINS(Email, &quot;zoho&quot;), 
! CONTAINS(Email, &quot;gawab&quot;), 
! CONTAINS(Email, &quot;aol&quot;), 
! CONTAINS(Email, &quot;aim&quot;), 
! CONTAINS(Email, &quot;lavabit&quot;), 
! CONTAINS(Email, &quot;excite&quot;), 
! CONTAINS(Email, &quot;lycos&quot;) 
), 
RIGHT(Email, LEN(Email) - FIND(&quot;@&quot;,Email)+0), &quot;Not a valid Company domain&quot; 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Domain (from email address)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECommerce_Account_Number__c</fullName>
        <label>ECommerce Account Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECommerce_Convert__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ECommerce Convert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>E_Com_Action__c</fullName>
        <description>For E-Com Reps Only</description>
        <inlineHelpText>For E-Com Reps Only</inlineHelpText>
        <label>E-Com Action</label>
        <picklist>
            <picklistValues>
                <fullName>Reroute - Bad Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reroute - Good Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Work Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reroute - Fix</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Eloqua_Lead_Score__c</fullName>
        <label>Eloqua Lead Score</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Number_Range__c</fullName>
        <description>Marketing (m) only field used to house ranges submitted via webforms. For the upper limit of the range please include a &quot;+&quot; at the end of it. eg 15000+ to signify the value for that selection.</description>
        <label>Employee Number Range</label>
        <picklist>
            <picklistValues>
                <fullName>Micro (&lt;10)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Small (10-50)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium (50-250)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Large (250-3000)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very Large (3000+)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Enforce_Lead_Status__c</fullName>
        <formula>IF( 
ISPICKVAL(Status,&quot;Qualified&quot;), 1, 0 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Enforce Lead Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Final_Status_Timestamp__c</fullName>
        <description>Used to house the date that a lead was set to Qualified or Disqualified</description>
        <label>zz-Final Status Timestamp</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HBSPT_BC_Portal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to track that something came in from the Hubspot Budget Conferencing Portal</description>
        <label>HBSPT-BC Portal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HBSPT_GUID__c</fullName>
        <externalId>true</externalId>
        <label>HBSPT - GUID</label>
        <length>55</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>HBSPT_PGi_com_Portal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to track that something came in from the PGi.com Portal</description>
        <label>HBSPT-PGi.com Portal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HBSPT_iMeet_Portal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to track that something came in from the iMeet Portal</description>
        <label>HBSPT-iMeet Portal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hidden_Checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox is used in the lead workflow to execute  Set Ownercopy twice</description>
        <label>Hidden Checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>How_Heard__c</fullName>
        <inlineHelpText>How did this lead hear about PGi</inlineHelpText>
        <label>How Heard</label>
        <picklist>
            <picklistValues>
                <fullName>Used a PGi product in the past</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner and Third-party website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Word of Mouth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PR/Trade Show</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Search engine (Google, Yahoo, Bing)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social media (Blog, Twitter, Facebook)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advertisement (TV, Radio, Billboard)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HubSpot_Inc__HubSpot_Intelligence__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HubSpot Intelligence</label>
        <referenceTo>HubSpot_Inc__HubSpot_Intelligence__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HubSpot_Inc__NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HubSpot_Inc__SICCode__c</fullName>
        <label>SIC Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hubspot_Email_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created as issue with sending directly to Email Opt Out.  Push to standard field via workflow rule with ISCHANGED for this field as the criteria</description>
        <label>Hubspot Email Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hubspot_Portal_Copy__c</fullName>
        <formula>&quot;This field is being removed&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>z-Hubspot Portal Copy</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IM_ACCOUNT_CANCELLED__c</fullName>
        <label>IM_ACCOUNT_CANCELLED</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IM_AVGATTENDEES__c</fullName>
        <label>IM_AVGATTENDEES</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IM_BILLINGSTARTDATE__c</fullName>
        <label>IM_BILLINGSTARTDATE</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IM_BILLTOFIRSTNAME__c</fullName>
        <label>IM_BILLTOFIRSTNAME</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IM_BILLTOLASTNAME__c</fullName>
        <label>IM_BILLTOLASTNAME</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IM_COMPANY__c</fullName>
        <label>IM_COMPANY</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IM_CREDITCARDONFILE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IM_CREDITCARDONFILE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IM_EMAIL_NOTIFICATION_ADDRESS__c</fullName>
        <label>IM_EMAIL_NOTIFICATION_ADDRESS</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>IM_LAST_IMEET_ROOM_LOGIN__c</fullName>
        <label>IM_LAST_IMEET_ROOM_LOGIN</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IM_LAST_ROOM_LOGIN__c</fullName>
        <label>IM_LAST_ROOM_LOGIN</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IM_LOCATION__c</fullName>
        <label>IM_LOCATION</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IM_MAXATTENDEES__c</fullName>
        <label>IM_MAXATTENDEES</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IM_MEETINGSLAST30DAYS__c</fullName>
        <label>IM_MEETINGSLAST30DAYS</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IM_MEETINGSLAST60DAYS__c</fullName>
        <label>IM_MEETINGSLAST60DAYS</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IM_MEETINGSLAST90DAYS__c</fullName>
        <label>IM_MEETINGSLAST90DAYS</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IM_MOSTRECENTMEETING__c</fullName>
        <label>IM_MOSTRECENTMEETING</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IM_OFFEREXPIRES__c</fullName>
        <label>IM_OFFEREXPIRES</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IM_PGICLIENTID__c</fullName>
        <label>IM_PGICLIENTID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IM_PGI_ACCT_ID__c</fullName>
        <label>IM_PGI_ACCT_ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IM_PHONE_1__c</fullName>
        <label>IM_PHONE_1</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IM_PHONE_2__c</fullName>
        <label>IM_PHONE_2</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IM_PROMOTION_CODE__c</fullName>
        <label>IM_PROMOTION_CODE</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IM_ROOM_URL__c</fullName>
        <label>IM_ROOM_URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>IM_SALESREP_EMAIL__c</fullName>
        <label>IM_SALESREP_EMAIL</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IM_SIGN_UP_DATE__c</fullName>
        <label>IM_SIGN_UP_DATE</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IM_TEXT_NOTIFICATION__c</fullName>
        <label>IM_TEXT_NOTIFICATION #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IM_TOTAL_ATTENDEES__c</fullName>
        <formula>IM_AVGATTENDEES__c * IM_TOTAL_MEETINGS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Avg attendees * total meetings</inlineHelpText>
        <label>IM_TOTAL ATTENDEES</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IM_TOTAL_MEETINGS__c</fullName>
        <label>IM_TOTAL_MEETINGS</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IM_UPDATED_AT__c</fullName>
        <label>IM_UPDATED_AT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IM_USAGEDELETEDATE__c</fullName>
        <label>IM_USAGEDELETEDATE</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IM_USER_ID__c</fullName>
        <externalId>true</externalId>
        <label>IM_USER_ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IM_WEBCAMUSED__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IM_WEBCAMUSED</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ignore_Assignment_Rule__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ignore Assignment Rule</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>